[package]
publish = false
edition = "2018"
name = "nom-async-stream-example"
version = "0.0.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
futures = "0.3.1"
nom = "5.0.1"

[dependencies.tokio]
version = "0.2.6"
features = ["full"]